# Aiedu-base

aiedu_bringup/: CMakeLists.txt  package.xml
aiedu_bringup/launch/: aiedu.launch  aiedu_3d_camera.launch  aiedu_core.launch  aiedu_lidar.launch  aiedu_pose_ekf.launch  aiedu_remote.launch  aiedu_sim.launch
aiedu_bringup/launch/includes/: description.launch.xml
aiedu_description/: CMakeLists.txt  package.xml
aiedu_description/meshes/base/: aiedu_case_asm.STL
aiedu_description/meshes/wheels/: wheel.STL
aiedu_description/urdf/: aiedu.gazebo.xacro  aiedu.urdf.xacro
aiedu_joy/: CMakeLists.txt  package.xml
aiedu_joy/config/: xbox.config.yaml
aiedu_joy/launch/: xbox360_joy.launch
aiedu_main/: CMakeLists.txt  package.xml
aiedu_main/src/: aiedu_main_node.cpp
aiedu_navigation/: CMakeLists.txt  package.xml
aiedu_navigation/launch/: navigation.launch
aiedu_navigation/maps/: map.pgm  map_one.pgm  map_two.pgm
aiedu_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
aiedu_slam/: CMakeLists.txt  package.xml
aiedu_slam/launch/: slam.launch
aiedu_tf/: CMakeLists.txt  package.xml
aiedu_tf/src/: aiedu_tf_node.cpp
epos4/epos4_hardware/: CMakeLists.txt  package.xml
epos4/epos4_hardware/include/epos4_hardware/: CLog.hpp  epos4_driver.hpp  epos4_parm.hpp
epos4/epos4_hardware/launch/: 2wheel_driver.launch  example.launch
epos4/epos4_hardware/src/: CLog.cpp  epos4_driver.cpp  epos4_hardware_2wheel_node.cpp  epos4_hardware_4wheel_node.cpp  epos4_hardware_node.cpp
epos4/epos4_library/: CMakeLists.txt  package.xml
epos4/epos4_library/include/epos4_library/: Definitions.h
my_exception/: CMakeLists.txt  package.xml
my_exception/src/: move_clor.cpp
rplidar_ros/launch/: rplidar.launch  rplidar_a3.launch  rplidar_a3_angle.launch  view_rplidar_a3.launch
rplidar_ros/src/: node.cpp
