################################################################################
# CMake
################################################################################
cmake_minimum_required(VERSION 2.8.3)
project(aiedu_bringup)

set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED COMPONENTS
  roscpp
  std_msgs
  diagnostic_msgs
  sensor_msgs
)

################################################################################
# Catkin specific configuration
################################################################################
catkin_package(
  LIBRARIES aiedu_bringup
  CATKIN_DEPENDS roscpp std_msgs diagnostic_msgs sensor_msgs
)

################################################################################
# Build
################################################################################
include_directories(
  ${catkin_INCLUDE_DIRS}
)

################################################################################
# Install
################################################################################

install(DIRECTORY launch
        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
)

################################################################################
# Test
################################################################################
