<?xml version="1.0"?>
<package>
  <name>aiedu_bringup</name>
  <version>0.1.0</version>
  <description>
    roslaunch scripts for starting the aiedu
  </description>
  <license>Apache License 2.0</license>
  <author email="jy6659@rastech.co.kr">Jhung</author>
  <maintainer email="jy6659@rastech.co.kr">Jhung</maintainer>
  <url type="website">http://www.rastech.co.kr</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rosserial_python</run_depend>

  <export></export>
</package>
